# evar

./: Cargo.toml  LICENSE  history.txt  readme.md
src/: args.rs  config.rs  context.rs  default_context.rs  error_report.rs  errors.rs  eval.rs  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs  readline.rs  types.rs
src/models/: context.rs  errors.rs  expression.rs  function.rs  mod.rs  operators.rs  statement.rs  token.rs  value.rs  variable.rs
src/parser/: mod.rs  test.rs
