[package]
name = "evar"
version = "0.2.0"
authors = ["enklht <enklht@gmail.com>"]
edition = "2024"
repository = "https://github.com/enklht/seva"
description = "Modern ergonomic math calculator inspired by eva"
readme = "./readme.md"
keywords = ["calculator", "repl", "math", "cli", "bc"]
categories = ["command-line-interface", "science", "mathematics"]
license = "MIT"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
chumsky = { version = "0.10.0", default-features = false, features = ["std"] }
codespan-reporting = "0.12.0"
colored = "3.0.0"
directories = "6.0.0"
logos = "0.15.0"
rustyline = { version = "16.0.0", features = ["derive"] }
thiserror = "2.0.16"

[features]
default = ["bpaf/bright-color"]

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
