[package]
name = "evar"
version = "0.2.0"
authors = ["enklht <enklht@gmail.com>"]
edition = "2024"
repository = "https://github.com/enklht/seva"
description = "Modern ergonomic math calculator inspired by eva"
readme = "./readme.md"
keywords = ["calculator", "repl", "math", "cli", "bc"]
categories = ["command-line-interface", "science", "mathematics"]
license = "MIT"

[dependencies]
bpaf = { version = "0.9.23", features = ["derive"] }
chumsky = { version = "0.12.0", default-features = false, features = ["std"] }
codespan-reporting = "0.13.1"
colored = "3.1.1"
directories = "6.0.0"
logos = "0.16.1"
rustyline = { version = "17.0.2", features = ["derive"] }
thiserror = "2.0.18"

[features]
default = ["bpaf/bright-color"]

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
